--- a/src/main/webapp/app/entities/project/project-acl/project-acl.component.html
+++ b/src/main/webapp/app/entities/project/project-acl/project-acl.component.html
@@ -1,20 +1,10 @@
 <div>
     <h2 id="page-heading">
-        <button type="submit" [routerLink]="['/project']" class="btn btn-info float-right ml-1">
+        <button type="submit" [routerLink]="['/project']" class="btn btn-info btn-sm float-left mr-1 mt-2">
             <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back"> Back</span>
         </button>
         <span jhiTranslate="defaultApp.projectAcl.home.title">Project Permissions</span>
         <span>{{ project.name }}</span>
-        <button
-            id="jh-create-entity"
-            class="btn btn-primary float-right jh-create-entity create-project-acl"
-            [routerLink]="['/project', project.id, 'project-acl', 'new']"
-        >
-            <fa-icon [icon]="'plus'"></fa-icon>
-            <span jhiTranslate="defaultApp.projectAcl.home.createLabel">
-                Create new Project Acl
-            </span>
-        </button>
     </h2>
     <jhi-alert></jhi-alert>
     <br />
@@ -24,7 +14,6 @@
                 <tr>
                     <th><span jhiTranslate="defaultApp.projectAcl.user">User</span></th>
                     <th><span jhiTranslate="defaultApp.projectAcl.role">Role</span></th>
-                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -34,31 +23,22 @@
                     </td>
 
                     <td>
-                        <span *ngFor="let acl of projectAcl.acls">
-                            <span class="badge badge-info"
-                                >{{ acl.role }}
-                                <a *ngIf="currentAccount.id !== acl.user.id"
-                                    ><fa-icon
-                                        [routerLink]="[
-                                            '/',
-                                            { outlets: { popup: 'project/' + acl.project.id + '/project-acl/' + acl.id + '/delete' } }
-                                        ]"
-                                        replaceUrl="true"
-                                        queryParamsHandling="merge"
-                                        [icon]="'times'"
-                                    ></fa-icon></a
-                            ></span>
-                            &nbsp;
-                        </span>
-                    </td>
-                    <td class="text-right">
-                        <div class="btn-group flex-btn-group-container">
-                            <select class="form-control" name="role" (change)="addToProjectAcl(projectAcl, $event)" id="field_role" required>
-                                <option value="null"></option>
-                                <option value="PROJECT_USER">{{ 'defaultApp.ProjectRole.PROJECT_USER' | translate }}</option>
-                                <option value="PROJECT_ADMIN">{{ 'defaultApp.ProjectRole.PROJECT_ADMIN' | translate }}</option>
-                            </select>
-                        </div>
+                        <ng-container *ngFor="let role of roles">
+                            <span *ngIf="containsRole(role, projectAcl.acls)" class="badge badge-success">
+                                <ng-container *ngFor="let acl of projectAcl.acls">
+                                    <a *ngIf="currentAccount.id !== projectAcl.user.id && acl.role === role">
+                                        <fa-icon (click)="deletePermission(acl)" [icon]="'times'"> </fa-icon>
+                                    </a>
+                                </ng-container>
+                                {{ role }}
+                            </span>
+                            <span *ngIf="!containsRole(role, projectAcl.acls)" class="badge badge-danger">
+                                <a *ngIf="currentAccount.id !== projectAcl.user.id">
+                                    <fa-icon (click)="addPermission(projectAcl.user, role)" [icon]="'plus'"> </fa-icon>
+                                </a>
+                                {{ role }} </span
+                            >&nbsp;
+                        </ng-container>
                     </td>
                 </tr>
             </tbody>
