--- a/src/main/webapp/app/entities/project/project-acl/project-acl.component.html
+++ b/src/main/webapp/app/entities/project/project-acl/project-acl.component.html
@@ -20,6 +20,8 @@
                 <tr *ngFor="let projectAcl of userProjectAcls; trackBy: trackId">
                     <td>
                         {{ projectAcl.user?.login }}
+                        {{ projectAcl.user?.firstName }}
+                        {{ projectAcl.user?.lastName }}
                     </td>
 
                     <td>
@@ -43,5 +45,21 @@
                 </tr>
             </tbody>
         </table>
+    </div>
+    <div *ngIf="userProjectAcls">
+        <div class="row justify-content-center">
+            <jhi-item-count [page]="page" [total]="queryCount" [itemsPerPage]="itemsPerPage"></jhi-item-count>
+        </div>
+        <div class="row justify-content-center">
+            <ngb-pagination
+                [collectionSize]="totalItems"
+                [(page)]="page"
+                [pageSize]="itemsPerPage"
+                [maxSize]="5"
+                [rotate]="true"
+                [boundaryLinks]="true"
+                (pageChange)="loadPage(page)"
+            ></ngb-pagination>
+        </div>
     </div>
 </div>
